# plane-split

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: main.yml
benches/: split.rs
src/: bsp.rs  clip.rs  debug.rs  lib.rs  naive.rs  polygon.rs
tests/: clip.rs  main.rs  split.rs
