[package]
name = "plane-split"
version = "0.1.0"
description = "Plane splitting"
authors = ["Dzmitry Malyshau <kvark@mozilla.com>"]
license = "MPL-2.0"
repository = "https://github.com/kvark/plane-split"
keywords = ["geometry", "math"]
documentation = "https://docs.rs/plane_split"

[dependencies]
log = "0.3"
euclid = "0.11.2"
num-traits = {version = "0.1.37", default-features = false}
