[package]
name = "plane-split"
version = "0.17.1"
description = "Plane splitting"
authors = ["Dzmitry Malyshau <kvark@mozilla.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/plane-split"
keywords = ["geometry", "math"]
documentation = "https://docs.rs/plane-split"

[features]
default = ["debug"]
debug = ["serde", "euclid/serde"]

[dependencies]
binary-space-partition = "0.1.2"
euclid = "0.22"
log = "0.4"
num-traits = {version = "0.2", default-features = false}
serde = { version = "1.0", features = ["serde_derive"], optional = true }
